# g-track-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  auth.py  database.py  docker-compose.yml  list-of-items.txt  main.db  main.py  models.py  nginx_gtrack.conf  pyproject.toml  requirements.txt  schemas.py  systemd_gtrack.service
models/: gas_depletion_linear_regression.joblib  usage_clustering_model.joblib  usage_clustering_scaler.joblib
routers/: admin.py  complaints.py  dashboard.py  distributor.py  refill.py  report.py  sensor.py  settings.py  users.py
scripts/: backup.sh  populate_synthetic_database.py  test_clustering.py  test_email_service.py  train_depletion_model.py  train_usage_clustering.py  verify_database.py
scripts/models/: gas_depletion_linear_regression.joblib
services/: depletion_prediction.py  email_helper.py  email_service.py  leak_detection.py  report_service.py
